k8s/production/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waf-frontend
  namespace: default
  labels:
    app: waf-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf-frontend
  template:
    metadata:
      labels:
        app: waf-frontend
    spec:
      containers:
      - name: waf-frontend
        image: mwkwak3/waf-frontend:v4.0.0
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
